--- a/main.css
+++ b/main.css
@@ -9,3 +9,24 @@ div {
   border-right-color: transparent; /* the right side */
   border-bottom-color: transparent; /* and the bottom of the circle */
 }
+#red{
+  border-top-color: #f00;
+}
+#orange{
+  border-top-color: orange;
+}
+#yellow{
+  border-top-color: yellow;
+}
+#green{
+  border-top-color: green;
+}
+#light-blue{
+  border-top-color: lightblue;
+}
+#blue{
+  border-top-color: blue;
+}
+#violet{
+  border-top-color: violet;
+}
